// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OutlineButton /> primary renders correctly 1`] = `
<OutlineButton
  variant="primary"
>
  <button
    className="css-1jclakd-Button-OutlineButton emz9cav0"
  >
    Hello world
  </button>
</OutlineButton>
`;

exports[`<OutlineButton /> renders correctly 1`] = `
<OutlineButton
  variant="default"
>
  <button
    className="css-1hslae3-Button-OutlineButton emz9cav0"
  >
    Click here
  </button>
</OutlineButton>
`;

exports[`<OutlineButton /> rounded renders correctly 1`] = `
<OutlineButton
  variant="rounded"
>
  <button
    className="css-1da4l8q-Button-OutlineButton emz9cav0"
  >
    Hello world
  </button>
</OutlineButton>
`;
